// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table > "🍏" 1`] = `
{
  "original": "
┌─────────┬────────┐
│ (index) │ Values │
├─────────┼────────┤
│ 0       │ '🍏'   │
│ 1       │ '🍌'   │
│ 2       │ '🍒'   │
└─────────┴────────┘
",
  "result": "
┌────────┐
│ Values │
├────────┤
│ '🍏'   │
│ '🍌'   │
│ '🍒'   │
└────────┘
",
}
`;

exports[`table > ["🍏","🍌","🍒"] 1`] = `
{
  "original": "
┌─────────┬──────┬──────┬──────┐
│ (index) │ 0    │ 1    │ 2    │
├─────────┼──────┼──────┼──────┤
│ 0       │ '🍏' │ '🍌' │ '🍒' │
└─────────┴──────┴──────┴──────┘
",
  "result": "
┌──────┬──────┬──────┐
│ 0    │ 1    │ 2    │
├──────┼──────┼──────┤
│ '🍏' │ '🍌' │ '🍒' │
└──────┴──────┴──────┘
",
}
`;

exports[`table > [["🍏","🍌","🍒"]] 1`] = `
{
  "original": "
┌─────────┬──────────────────────┐
│ (index) │ 0                    │
├─────────┼──────────────────────┤
│ 0       │ [ '🍏', '🍌', '🍒' ] │
└─────────┴──────────────────────┘
",
  "result": "
┌──────────────────────┐
│ 0                    │
├──────────────────────┤
│ [ '🍏', '🍌', '🍒' ] │
└──────────────────────┘
",
}
`;

exports[`table > [{"emoji":"🍏","fruit":"apple"},{"emoji":"🍌","fruit":"banana"},{"emoji":"🍒","fruit":"cherry"}] 1`] = `
{
  "original": "
┌─────────┬─────────────────────────────────┬──────────────────────────────────┬──────────────────────────────────┐
│ (index) │ 0                               │ 1                                │ 2                                │
├─────────┼─────────────────────────────────┼──────────────────────────────────┼──────────────────────────────────┤
│ 0       │ { emoji: '🍏', fruit: 'apple' } │ { emoji: '🍌', fruit: 'banana' } │ { emoji: '🍒', fruit: 'cherry' } │
└─────────┴─────────────────────────────────┴──────────────────────────────────┴──────────────────────────────────┘
",
  "result": "
┌─────────────────────────────────┬──────────────────────────────────┬──────────────────────────────────┐
│ 0                               │ 1                                │ 2                                │
├─────────────────────────────────┼──────────────────────────────────┼──────────────────────────────────┤
│ { emoji: '🍏', fruit: 'apple' } │ { emoji: '🍌', fruit: 'banana' } │ { emoji: '🍒', fruit: 'cherry' } │
└─────────────────────────────────┴──────────────────────────────────┴──────────────────────────────────┘
",
}
`;

exports[`table > {"a│b":{"a":"foo","b":"bar"},"café":{"a":"foo","b":"bar"}} 1`] = `
{
  "original": "
┌─────────┬───────┬───────┐
│ (index) │ a     │ b     │
├─────────┼───────┼───────┤
│ a│b     │ 'foo' │ 'bar' │
│ café    │ 'foo' │ 'bar' │
└─────────┴───────┴───────┘
",
  "result": "
┌───────┬───────┐
│ a     │ b     │
├───────┼───────┤
│ 'foo' │ 'bar' │
│ 'foo' │ 'bar' │
└───────┴───────┘
",
}
`;

exports[`table > {"emoji":"🍏","fruit":"apple"} 1`] = `
{
  "original": "
┌─────────┬─────────┐
│ (index) │ Values  │
├─────────┼─────────┤
│ emoji   │ '🍏'    │
│ fruit   │ 'apple' │
└─────────┴─────────┘
",
  "result": "
┌─────────┐
│ Values  │
├─────────┤
│ '🍏'    │
│ 'apple' │
└─────────┘
",
}
`;

exports[`table > {"emoji":"🍏","fruit":"apple"} 2`] = `
{
  "original": "
┌─────────┬───────┬──────────┐
│ (index) │ emoji │ fruit    │
├─────────┼───────┼──────────┤
│ 0       │ '🍏'  │ 'apple'  │
│ 1       │ '🍌'  │ 'banana' │
│ 2       │ '🍒'  │ 'cherry' │
└─────────┴───────┴──────────┘
",
  "result": "
┌───────┬──────────┐
│ emoji │ fruit    │
├───────┼──────────┤
│ '🍏'  │ 'apple'  │
│ '🍌'  │ 'banana' │
│ '🍒'  │ 'cherry' │
└───────┴──────────┘
",
}
`;

exports[`table > {"𝖮𝖧 𝖭𝖮":{"a":"foo","b":"bar"},"好好好好好":{"a":"foo","b":"bar"}} 1`] = `
{
  "original": "
┌────────────┬───────┬───────┐
│ (index)    │ a     │ b     │
├────────────┼───────┼───────┤
│ 𝖮𝖧 𝖭𝖮      │ 'foo' │ 'bar' │
│ 好好好好好 │ 'foo' │ 'bar' │
└────────────┴───────┴───────┘
",
  "result": "
┌───────┬───────┐
│ a     │ b     │
├───────┼───────┤
│ 'foo' │ 'bar' │
│ 'foo' │ 'bar' │
└───────┴───────┘
",
}
`;
